# architecure_azure_snowflake_azure

./: .env.example  .gitignore  pyproject.toml
data/: df_all.pkl
data/ndjson_sim/iothub-ecat-candling-dev/raw/2026/05/15/: 04_32_0.json  04_33_0.json  04_34_0.json  04_35_0.json  04_36_0.json  04_37_0.json  04_38_0.json  04_39_0.json  04_40_0.json  04_41_0.json  04_42_0.json  04_43_0.json  04_44_0.json  04_45_0.json  04_46_0.json  04_47_0.json  04_48_0.json  04_49_0.json  04_50_0.json  04_51_0.json  04_52_0.json  04_56_0.json  04_57_0.json  04_58_0.json  04_59_0.json  05_00_0.json  05_01_0.json  05_02_0.json  05_03_0.json  05_04_0.json  05_05_0.json  05_06_0.json  05_07_0.json  05_08_0.json  05_09_0.json  05_10_0.json  05_11_0.json  (+143 more)
data/test_json/brut/: 09_56_01.json  10_04_01.json
data/test_json/converted/: 09_56_01_decoded.json  10_04_01_decoded.json
docs/: referentiel_couvoirs.xlsx  silver_trays_iceberg_spec.md
notebooks/: 01_inspect_silver.ipynb  02_simulate_ndjson.ipynb  03_parse_bronze.ipynb  04_simulate_live_iceberg.ipynb.ipynb  05_simulate_live_iceberg.ipynb.ipynb  05_test_idempotence.ipynb  06_explore_iceberg_metadata.ipynb  06_test_idempotence.ipynb  07_compaction.ipynb  07_explore_iceberg_metadata.ipynb  08_explo_visulisation.ipynb  09_gold_duckdb.ipynb
schemas/: silver_trays_iceberg_schema.json
src/: catalog.py  decode_iot_body.py  schema.py
src/bronze/: parser.py
src/config/: catalog.py  machine_registry.json  schema.py  settings.py  tray_types.json
src/maintenance/: compactation.py  function_app.py
src/silver/: function_ap.py  writer.py
