[project]
name = "architecture-azure-snowflake-candling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2026.5.0",
    "deltalake>=1.6.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyiceberg[adls,pyarrow,sql-sqlite]>=0.11.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
